@@ -15,6 +15,11 @@ What's New in Python 3.0 beta 5
 Core and Builtins
 -----------------
 
+- Issue #4233: Changed semantic of ``_fileio.FileIO``'s ``close()`` 
+  method on file objects with closefd=False. The file descriptor is still
+  kept open but the file object behaves like a closed file. The ``FileIO``
+  object also got a new readonly attribute ``closefd``.
+
 - Issue #3626: On cygwin, starting python with a non-existent script name
   would not display anything if the file name is only 1 character long.
 
